--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=774&q=80" alt="Profile Picture" class="profile-img">
+                <img src="file.jpg" alt="Profile Picture" class="profile-img">
                 <h1>Nischal Magar</h1>
                 <h2>Frontend Developer & Designer</h2>
                 <p>I create clean websites that provide great user experiences. Passionate about coding and always eager to learn new technologies.</p>
