--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <section id="hero">
         <div class="container">
             <div class="hero-content">
-                <img src="file.jpg" alt="Profile Picture" class="profile-img">
+                <img src="test.jpg" alt="Profile Picture" class="profile-img">
                 <h1>Nischal Magar</h1>
                 <h2>Frontend Developer & Designer</h2>
                 <p>I create clean websites that provide great user experiences. Passionate about coding and always eager to learn new technologies.</p>
