--- a/task1/index.html
+++ b/task1/index.html
@@ -33,7 +33,7 @@
         </ul>
         
         <h2>Photo</h2>
-        <img src="niss.jpeg" alt="Profile Photo" class="profile-photo">
+        <img src="sm.jpg" alt="Profile Photo" class="profile-photo">
         
         <h2>Favorite Website</h2>
         <p><a href="https://www.github.com" target="_blank">Visit GitHub - My Favorite Developer Community</a></p>
