Update college name from Archid to Orchid

--- a/task1/index.html
+++ b/task1/index.html
@@ -57,7 +57,7 @@
             <tbody>
                 <tr>
                     <td>High School</td>
-                    <td>Archid College</td>
+                    <td>Orchid College</td>
                     <td>2023-2024</td>
                 </tr>
                 <tr>
